2011-11-25  Yury Semikhatsky  <yurys@chromium.org>

        Unreviewed. Chromium build fix.

        * public/WebDevToolsFrontendClient.h:
        (WebKit::WebDevToolsFrontendClient::sendFrontendLoaded): dowsntream implementation
        with OVERRIDE modifier fails to compile without this stub.

2011-11-25  Yury Semikhatsky  <yurys@chromium.org>

        [Chromium] Web Inspector: get rid of WebDevToolsFrontendClient::sendFrontendLoaded method
        https://bugs.webkit.org/show_bug.cgi?id=73126

        No need to have a separate client call for this. The front-end can store messages
        which arrive before front-end loaded and dispatch them later. This happens in layout
        tests only by the way as all other messages should be initiated by the front-end code.

        Reviewed by Pavel Feldman.

        * public/WebDevToolsFrontendClient.h:
        * src/WebDevToolsAgentImpl.cpp:
        (WebKit::WebDevToolsAgentImpl::attach):
        (WebKit::WebDevToolsAgentImpl::frontendLoaded):
        * src/WebDevToolsFrontendImpl.cpp:
        (WebKit::WebDevToolsFrontendImpl::WebDevToolsFrontendImpl):
        (WebKit::WebDevToolsFrontendImpl::dispatchOnInspectorFrontend):
        (WebKit::WebDevToolsFrontendImpl::frontendLoaded):
        (WebKit::WebDevToolsFrontendImpl::doDispatchOnInspectorFrontend):
        * src/WebDevToolsFrontendImpl.h:

2011-11-24  Yury Semikhatsky  <yurys@chromium.org>

        [Chromium] Web Inspector: remove legacy debugger support
        https://bugs.webkit.org/show_bug.cgi?id=73081

        Removed classed providing access to V8 debugging protocol. Clients should
        use Web Inspector protocol instead.

        Reviewed by Pavel Feldman.

        * WebKit.gyp:
        * public/WebDevToolsAgent.h:
        * public/WebDevToolsAgentClient.h:
        * src/DebuggerAgentImpl.cpp: Removed.
        * src/DebuggerAgentImpl.h: Removed.
        * src/DebuggerAgentManager.cpp: Removed.
        * src/DebuggerAgentManager.h: Removed.